# Lyra

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.cursor/agents/: cpp-developer.md  researcher.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/skills/lyra-avatar/: SKILL.md  reference.md
agents/lyra/: DIRECTORY_GUIDE.md  SKILL.md  architecture.md  character_file.md  model-config.md  system_prompt.md
agents/lyra/references/: appearance_reference.md  backstory.md  backstory_current_situation.md  backstory_escape.md  backstory_homeworld.md  backstory_long_term_hopes.md  backstory_personality_impact.md  color_emotion_map.md  idiom_list.md  ship_reference.md
agents/lyra/resources/: README.md
agents/lyra/state/: relationship_state.md
agents/lyra/subagents/: python-developer.md
agents/lyra/tools/: README.md
db/: schema.sql
docs/: db_restore.md  lyra_build_plan.md  lyra_system_requirements.md
lyra/: __init__.py  config.py  corpus_mcp.py  db.py  embeddings.py  ingest.py  memory.py  notion_sync.py
mcp/: README.md
mcp/server/: __init__.py  main.py
mcp/tools/: add_source.md  propose_memory.md  search_corpus.md  search_memories.md
scripts/: README.md  approve_memory.py  db_backup.py  db_init.py  doctor.ps1  install-grok.ps1  install-grok.sh  sync_subagents.py  verify-grok.ps1
tests/: conftest.py  test_db_schema.py  test_embeddings.py  test_ingest.py  test_mcp_server.py  test_memory.py  test_notion_sync.py  test_persona_reorg.py  test_subagents_sync.py
(+34 files in other folders)
