[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra"
version = "0.1.0"
description = "Lyra Phase 1 services"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "sentence-transformers>=3.0",
  "pypdf>=4.3",
  "python-docx>=1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "responses>=0.25"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["lyra"]
